# ff

./: .gitignore  .travis.yml  Cargo.toml  README.md
_maint/: _create_release.sh  manual_test_env.sh
_maint/readme-generation/: Dockerfile  _generate-readme-for-apply.sh  _generate-readme-for-init.sh  _utils.sh  generate-readme-for-apply.sh  generate-readme-for-init.sh  run_generation.sh
ci/: before_deploy.sh  script.sh
src/: cli.rs  config.rs  core.rs  main.rs
tests/: Dockerfile  _run_tests.py  run_tests.sh
